fix: Hide artists on mobile

--- a/src/components/Bento/NowPlaying/NowPlaying.css
+++ b/src/components/Bento/NowPlaying/NowPlaying.css
@@ -59,4 +59,8 @@
   .bento-spotify__title {
     font-size: 12px;
   }
+
+  .bento-spotify__artists {
+    display: none;
+  }
 }
